--- a/StyleSheets/global.css
+++ b/StyleSheets/global.css
@@ -1,17 +1,19 @@
 header{
     text-align: left; /*This is to keep the logo towards the left*/
 }
+
 h1 {
     text-align: center;
     font-size: 50px;
     color: grey; 
 }
+
 body{
     background-color: beige;
     color: grey;
     text-align: center;
 }
-footer{
-    text-align: center;
-    font-size: 20px
+
+nav{
+
 }
