styled new content

--- a/StyleSheets/articles.css
+++ b/StyleSheets/articles.css
@@ -8,6 +8,9 @@
 #founding{
     text-align: left;
 }
+#IBMResponse{
+    text-align: left; 
+}
 /* Portable III Tab*/ 
 #overview{
     text-align: left;
