--- a/StyleSheets/global.css
+++ b/StyleSheets/global.css
@@ -5,15 +5,19 @@ header{
 h1 {
     text-align: center;
     font-size: 50px;
-    color: grey; 
+    color: #ff8503; 
 }
 
 body{
-    background-color: beige;
-    color: grey;
+    background-color: black;
+    color: #ff8503;
     text-align: center;
 }
 
 nav{
+    color: #ff8503;
+}
 
+a:visited{
+    color: #10e0c8;
 }
