--- a/StyleSheets/global.css
+++ b/StyleSheets/global.css
@@ -15,12 +15,14 @@ header img{
     padding: 50px; 
 }
 
+/*For the text at the top of each page*/
 h1 {
     text-align: center;
     font-size: 50px;
     color: #ff8503; 
 }
 
+/*Styling for the content of each page*/
 body{
     background-color: black;
     color: #ff8503;
@@ -29,6 +31,7 @@ body{
     line-height: 1.0; 
 }
 
+/*The navigation bar for each page (will become a dropdown menu most likely)*/
 nav{
     color: #ff8503;
     position: absolute;
@@ -51,6 +54,7 @@ nav ul a {
     font: bold;
 }
 
+/*the footer of the home page (wanted the navigation at the bottom and more stylized)*/
 footer{ 
     font-size: 20px; 
 }
