Added more content and images

--- a/StyleSheets/articles.css
+++ b/StyleSheets/articles.css
@@ -19,6 +19,12 @@
 #innovation{
     text-align: left; 
 }
+#Expansion{
+    text-align: left;
+}
+#WhatNext{
+    text-align:left; 
+}
 /*Common Issues Tab*/
 #KeyboardCable{
     text-align: left;
