--- a/StyleSheets/global.css
+++ b/StyleSheets/global.css
@@ -26,6 +26,7 @@ h1 {
 body{
     background-color: black;
     color: #ff8503;
+    text-align:center; 
     font-size: 16px; 
     line-height: 1.0; 
 }
