--- a/StyleSheets/global.css
+++ b/StyleSheets/global.css
@@ -6,7 +6,7 @@
 
 header img{
     position: absolute;
-    top: -15px;
+    top: 5px;
     left: 0px; /*This is to keep the logo towards the left*/
 }
 
@@ -18,6 +18,9 @@ header img{
 /*For the text at the top of each page*/
 header .PageTitle{
     border: #ff8503 groove 8px; 
+    border-left: 0px;
+    border-right: 0px; 
+    margin-bottom: 25px;
 }
 
 h1 {
