Set a minimum window width to keep content neat

--- a/StyleSheets/articles.css
+++ b/StyleSheets/articles.css
@@ -12,6 +12,9 @@ aside{
     float: right; 
     position: relative; 
     display: block;
+    min-width: 500px; 
+    margin: auto; 
+    margin-right: 0px; 
 }
 
 .Enlargable:hover{
