--- a/StyleSheets/global.css
+++ b/StyleSheets/global.css
@@ -47,6 +47,7 @@ body{
     text-align:center; 
     font-size: 16px; 
     line-height: 1.0; 
+    min-width: 1000px; 
 }
 
 /*The navigation bar for each page (will become a dropdown menu most likely)*/
